--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
     font-weight: 700;
     text-decoration: underline;
     text-transform: uppercase;
-    
+    margin-bottom: 20px;
 }
 
 .header__theme {
