--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body {
 
 hr {
 border-color: rgba(180, 180, 180, 0.5);
-border-width: 2px;
+border-width: 1px;
 }
 
 .footer-container {
@@ -54,4 +54,5 @@ border-width: 2px;
     padding: 20px 50px;
     text-align: center;
     color: rgb(180, 180, 180);
+    font-size: small;
 }
