--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,9 @@ body {
 
 /* MAIN */
 .js-chart {
-    padding: 0 50px 30px 50px;
+    padding: 10px 50px 10px 50px;
     margin-bottom: 30px;
-    
+    max-height: 500px;
 }
 
 
