--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
 .js-chart {
     padding: 10px 50px 10px 50px;
     margin-bottom: 30px;
-    max-height: 500px;
+    max-height: 600px;
 }
 
 
@@ -55,4 +55,5 @@ border-width: 1px;
     text-align: center;
     color: rgb(180, 180, 180);
     font-size: small;
+    font-family: Arial, sans-serif;
 }
